OpenSearchServer
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

OpenSearchServer 1.2.4

New features:
- 3510598: Add CSV format in the select XML/HTTP API
- 3498421: Set a default URL value for replication
- 3498373: Remove script and object tag content in db crawler
- 3495004: Add progress info in scheduler task	
- 3490031: Asynchronous XML upload
- 3489935: Default stop words list
- 3489934: A default autocomplete field and analyzer
- 3489873: A scheduler task to copy terms to an index
- 3489642: Unable to scroll all the log in runtime/logs panel
- 3487772: Advanced spell check
- 3487219: RegExp filter for DatabaseCrawler
- 3483920: BoostQuery support
- 3483681: Add a download button for log files
- 3482284: LimitInputStream should be buffered
- 3477836: A separated error log for the parser	
- 3469777: Scored snippets

Bug fixes:
- 3518687: URL normalization required in the Web crawler
- 3521414: File not parsed in database crawler
- 3516114: NPE with Web Crawler when no unique field is set
- 3509333: Error 500 when loading robots.txt
- 3500288: Wrong facet count when using optimized collapsing
- 3498607: NPE when collapsing is enable with no documents found
- 3495681: StringIndexOutOfBoundsException on snippet
- 3489854: A faster indexation when using XML upload
- 3489550: Schema API gives IllegalStateException
- 3485241: Pages with meta noindex are indexed
- 3483798: HTML parser prints many logs
- 3483259: Underscore added when using synonyms on expression
- 3482151: Monitor API response gives error
- 3479649: SetField and DeleteField API don't update config.xml
- 3479548: Report log files are truncated
- 3476578: UTF-8 character as separator in snippet field
- 3475446: head indexed instead of body (using <script /> in head)
- 3476551: Query with Quotation Marks has unusual results	
- 3474877: URL Filter doesn't work for jsessionid