@@ -1,0 +1,39 @@
+<!--
+	License Agreement for OpenSearchServer
+	Copyright (C) 2012 Emmanuel Keller / Jaeksoft
+	http://www.open-search-server.com
+	This file is part of OpenSearchServer.
+	OpenSearchServer is free software: you can
+	redistribute it and/or modify it under the terms of the GNU General
+	Public License as published by the Free Software Foundation, either
+	version 3 of the License, or (at your option) any later version.
+	OpenSearchServer is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+	General Public License for more details. You should have received a
+	copy of the GNU General Public License along with OpenSearchServer.
+	If not, see <http://www.gnu.org/licenses/>.
+-->
+<window id="advanced"
+	use="com.jaeksoft.searchlib.web.controller.runtime.AdvancedController">
+	<panel title="Advanced" border="normal">
+		<panelchildren>
+			<grid>
+				<columns>
+					<column align="right" hflex="min" />
+					<column align="left" hflex="min" />
+					<column align="left" />
+				</columns>
+				<rows>
+					<row>
+						<label value="Maximum number of clauses" />
+						<intbox cols="5"
+							value="@{advanced.maxClauseCount.value}" />
+						<label
+							value="Set the maximum number of clauses permitted per boolean query. Default value is 1024" />
+					</row>
+				</rows>
+			</grid>
+		</panelchildren>
+	</panel>
+</window>
