@@ -1,7 +1,7 @@
 /**   
  * License Agreement for OpenSearchServer
  *
- * Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+ * Copyright (C) 2012 Emmanuel Keller / Jaeksoft
  * 
  * http://www.open-search-server.com
  * 
@@ -22,7 +22,7 @@
  *  If not, see <http://www.gnu.org/licenses/>.
  **/
 
-package com.jaeksoft.searchlib.crawler.common.database;
+package com.jaeksoft.searchlib.util.properties;
 
 import java.io.File;
 import java.io.FileInputStream;
@@ -30,17 +30,13 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.Properties;
 
-public abstract class PropertyManager {
+public class PropertyManager {
 
 	private File propFile;
 
 	private Properties properties;
 
-	protected PropertyItem<Integer> indexDocumentBufferSize;
-	protected PropertyItem<Boolean> crawlEnabled;
-	protected PropertyItem<Integer> maxThreadNumber;
-
-	protected PropertyManager(File file) throws IOException {
+	public PropertyManager(File file) throws IOException {
 		propFile = file;
 		properties = new Properties();
 		if (propFile.exists()) {
@@ -55,13 +51,9 @@ public abstract class PropertyManager {
 					inputStream.close();
 			}
 		}
-		indexDocumentBufferSize = new PropertyItem<Integer>(this,
-				"indexDocumentBufferSize", 1000);
-		maxThreadNumber = newIntegerProperty("maxThreadNumber", 10);
-		crawlEnabled = newBooleanProperty("crawlEnabled", false);
 	}
 
-	protected void save() throws IOException {
+	public void save() throws IOException {
 		FileOutputStream fos = null;
 		try {
 			fos = new FileOutputStream(propFile);
@@ -74,7 +66,7 @@ public abstract class PropertyManager {
 		}
 	}
 
-	protected PropertyItem<Integer> newIntegerProperty(String name,
+	public PropertyItem<Integer> newIntegerProperty(String name,
 			Integer defaultValue) throws NumberFormatException, IOException {
 		PropertyItem<Integer> propertyItem = new PropertyItem<Integer>(this,
 				name, defaultValue);
@@ -84,7 +76,7 @@ public abstract class PropertyManager {
 		return propertyItem;
 	}
 
-	protected PropertyItem<Boolean> newBooleanProperty(String name,
+	public PropertyItem<Boolean> newBooleanProperty(String name,
 			Boolean defaultValue) {
 		PropertyItem<Boolean> propertyItem = new PropertyItem<Boolean>(this,
 				name, defaultValue);
@@ -96,7 +88,7 @@ public abstract class PropertyManager {
 		return propertyItem;
 	}
 
-	protected PropertyItem<String> newStringProperty(String name,
+	public PropertyItem<String> newStringProperty(String name,
 			String defaultValue) {
 		PropertyItem<String> propertyItem = new PropertyItem<String>(this,
 				name, defaultValue);
@@ -109,18 +101,6 @@ public abstract class PropertyManager {
 	public void put(PropertyItem<?> propertyItem) throws IOException {
 		propertyItem.put(properties);
 		save();
-	}
-
-	public PropertyItem<Boolean> getCrawlEnabled() {
-		return crawlEnabled;
-	}
-
-	public PropertyItem<Integer> getIndexDocumentBufferSize() {
-		return indexDocumentBufferSize;
-	}
-
-	public PropertyItem<Integer> getMaxThreadNumber() {
-		return maxThreadNumber;
 	}
 
 }
